RESOLVED FIXED61749
[efl] Fix _ewk_frame_children_iterator_next().
https://bugs.webkit.org/show_bug.cgi?id=61749
Summary [efl] Fix _ewk_frame_children_iterator_next().
Raphael Kubo da Costa (:rakuco)
Reported 2011-05-30 14:28:32 PDT
[efl] Fix _ewk_frame_children_iterator_next().
Attachments
Patch (2.37 KB, patch)
2011-05-30 14:29 PDT, Raphael Kubo da Costa (:rakuco)
no flags
Archive of layout-test-results from cr-jail-7 (209.36 KB, application/zip)
2011-05-30 18:16 PDT, WebKit Commit Bot
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-05-30 14:29:59 PDT
Kent Tamura
Comment 2 2011-05-30 16:38:32 PDT
Comment on attachment 95373 [details] Patch Looks ok.
WebKit Commit Bot
Comment 3 2011-05-30 18:16:16 PDT
Comment on attachment 95373 [details] Patch Rejecting attachment 95373 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'build-..." exit_code: 2 Last 500 characters of output: tests/xmlhttprequest ................................................................................................................................................................................ http/tests/xmlhttprequest/web-apps ............... http/tests/xmlhttprequest/workers ........... http/tests/xmlviewer . http/tests/xmlviewer/dumpAsText ........... 815.33s total testing time 23682 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 17 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/8754207
WebKit Commit Bot
Comment 4 2011-05-30 18:16:20 PDT
Created attachment 95387 [details] Archive of layout-test-results from cr-jail-7 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: cr-jail-7 Port: Mac Platform: Mac OS X 10.6.7
Raphael Kubo da Costa (:rakuco)
Comment 5 2011-05-30 18:48:45 PDT
This looks like a false alarm, there's nothing in the patch which touches anything mac-related. Should I change the patch to cq? again?
Gyuyoung Kim
Comment 6 2011-05-30 18:51:28 PDT
(In reply to comment #5) > This looks like a false alarm, there's nothing in the patch which touches anything mac-related. Should I change the patch to cq? again? Yes, it looks like false alram for me. Why don't you try push this patch to cq again ?
WebKit Commit Bot
Comment 7 2011-05-30 19:18:18 PDT
Comment on attachment 95373 [details] Patch Clearing flags on attachment: 95373 Committed r87706: <http://trac.webkit.org/changeset/87706>
WebKit Commit Bot
Comment 8 2011-05-30 19:18:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.