2011-05-30  Raphael Kubo da Costa  <kubo@profusion.mobi>

Reviewed by Kent Tamura.

        [efl] Fix _ewk_frame_children_iterator_next().
        https://bugs.webkit.org/show_bug.cgi?id=61749

        The iterator was returning always the first child, making tests like
        fast/history/history-back-initial-vs-final-url.html to timeout and
        eventually run out of memory.

        * ewk/ewk_frame.cpp:
        (_ewk_frame_children_iterator_next):
        (ewk_frame_children_iterator_new):

Canonical link: https://commits.webkit.org/77189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87706 268f45cc-cd09-0410-ab3c-d52691b4dbfc